@startuml

CardQuestion <-- CardQuestionMultiple 
CardQuestion <-- CardQuestionBoolean 
' CardQuestion <-- CardQuestionSurvey
' Game *--- CardQuestion

abstract CardQuestion {
    - string type
    - string category
    - string question
    - string difficulty
    - string point
    + CardQuestion(array data)
    + showQuestion()
    + abstract showAnswers() 
    + abstract isCorrect($user_response) 
}

class CardQuestionMultiple {
    ' - string user_response
    - string correct_answer
    - array  incorrect_answers
} 

class CardQuestionBoolean {
    ' - bool user_response
    - bool correct_answer
   
} 



' class CardQuestionSurvey {

'     ' + Survey survey_service
   
' } 

@enduml